--- a/style.css
+++ b/style.css
@@ -19,9 +19,14 @@ body {
   background-color: rgba(0,0,0,.5);
 }
 
+ul {
+  padding-left: 0;
+}
+
 li {
   display: inline;
   color: white;
+  margin-right: 25px;
 }
 
 li img {
