--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ li img {
   position: relative;
   top: 50px;
   text-shadow: 0 2px 3px rgba(0,0,0,.4);
+  text-align: center;
 }
 
 /* Supporting */
