--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ li img {
   text-shadow: 0 2px 3px rgba(0,0,0,.4);
   text-align: center;
   color: #fff;
+  background-color: rgba(0,0,0,0);
 }
 
 /* Supporting */
