--- a/style.css
+++ b/style.css
@@ -62,3 +62,11 @@ h1 {
   margin-left: auto;
   margin-right: auto;
 }
+
+.col-md-4 h2 {
+  font-size: 24px;
+}
+
+.col-md-4 p {
+  font-size: 16px;
+}
