--- a/style.css
+++ b/style.css
@@ -70,3 +70,11 @@ h1 {
 .col-md-4 p {
   font-size: 16px;
 }
+
+
+@media screen and (max-width: 992px) {
+  /* remember to change max/min */
+  .col-md-4 p {
+    margin-bottom: 40px;
+  }
+}
