--- a/style.css
+++ b/style.css
@@ -71,10 +71,25 @@ h1 {
   font-size: 16px;
 }
 
-
 @media screen and (max-width: 992px) {
   /* remember to change max/min */
   .col-md-4 p {
     margin-bottom: 40px;
   }
+}
+
+.footer {
+  text-align: center;
+}
+
+.footer a {
+  color: #fff;
+  text-decoration: none;
+  background-color: rgba(0,255,188,0.5);
+  padding: 10px 40px;
+  border-radius: 10px;
+}
+
+.footer a:hover {
+  background-color: rgba(0,0,0,.5);
 }
