--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ li {
     margin-right: 25px;
 }
 
+li:not(:first-child):hover {
+  border-bottom: 1px solid #01F3B3;
+  padding-bottom: 4px;
+  color: #01F3B3;
+}
+
 li img {
     width: 36px;
 }
