--- a/style.css
+++ b/style.css
@@ -81,13 +81,16 @@ h1 {
 
 .col-md-4 p {
     font-size: 16px;
+    margin-bottom: 40px;
 }
 
-@media screen and (max-width: 992px) {
-    /* remember to change max/min */
-    .col-md-4 p {
-        margin-bottom: 40px;
-    }
+
+@media screen and (min-width: 1024px) {
+  /* remember to change max/min 1024 */
+
+  .col-md-4 p {
+    margin-bottom: 10px;
+  }
 }
 
 .footer {
