--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ li:not(:first-child):hover {
   border-bottom: 1px solid #01F3B3;
   padding-bottom: 4px;
   color: #01F3B3;
+  cursor: pointer;
 }
 
 li img {
