--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ footer {
 }
 
 footer a {
+    /* stuff being canceled out by boot here*/
     margin-top: 100px;
     color: #fff;
     text-decoration: none;
